--- a/src/site.ejs
+++ b/src/site.ejs
@@ -483,7 +483,7 @@
                             <div class="flex items-center gap-2 flex-shrink-0">
                                 <div class="flex flex-col leading-tight">
                                     <span class="font-medium">Dirty chai latte</span>
-                                    <span class="text-xs italic absolute top-[80%] left-[15px] mt-0.5">(Chai latte s shotem espresa)</span>
+                                    <span class="text-xs italic absolute top-[80%] left-[15px] mt-0.5">(Chai latte s shotem espressa)</span>
                                 </div>
                             </div>
                             <span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
