--- a/src/site.ejs
+++ b/src/site.ejs
@@ -789,15 +789,15 @@
                 <div class="flex">
                     <img class="hidden md:flex h-6 mr-4" src="svg/phone.svg" alt="">
                     <p class="mr-1 text-white">Telefon:</p>
-                    <a href="tel:607769814" aria-label="Our phone" title="Our phone"
+                    <a href="tel:771270424" aria-label="Our phone" title="Our phone"
                        class="text-white custom-underline custom-underline-footer">+420
-                        607 769 814</a>
+                        771 270 424</a>
                 </div>
                 <div class="flex items-center">
                     <img class="hidden md:flex h-5 mr-3" src="svg/email.svg" alt="">
                     <p class="mr-1 text-white">Email:</p>
-                    <a href="mailto:info@restcafe.cz" aria-label="Our email" title="Our email"
-                       class="text-white custom-underline custom-underline-footer">info@restcafe.cz</a>
+                    <a href="mailto:manager@restcafe.cz" aria-label="Our email" title="Our email"
+                       class="text-white custom-underline custom-underline-footer">manager@restcafe.cz</a>
                 </div>
                 <div class="flex">
                     <img class="hidden md:flex h-6 mr-4" src="svg/location.svg" alt="">
